Fix Maven surefire plugin build error