@@ -189,7 +189,9 @@
                     <excludes>
                         <exclude>**/it/**</exclude>
                     </excludes>
-
+                    <forkCount>3</forkCount>
+                    <reuseForks>true</reuseForks>
+                    <argLine>-Xmx1024m -XX:MaxPermSize=256m</argLine>
                 </configuration>
             </plugin>
 
